src/objects/GlUt_DisableAutomation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>23-08-2017 Accenture created custom setting to mute trigger, validation rule, workflow, process builder</description>
    <fields>
        <fullName>AccountTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>23-08-2017 : Accenture: Manish : Created Field as API name of object to validate trigger needs to run or not</description>
        <label>Account Triggers Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>21 Sep 2017, P Dixon.</description>
        <label>Bill Triggers Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Triggers Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadingTriggers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ReadingTriggers Disabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Disable Automation</label>
</CustomObject>